--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,12 @@
   font-size: 14px;
 }
 
+.my-message {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
 .chat-users ul {
   list-style: none;
   padding: 0;
